// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AssignTrackingDomain form should have button disabled when form is pristine 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <p>
      Link to a tracking domain to track opens, clicks, and unsubscribes.
    </p>
    <Link
      replace={false}
      to="/account/tracking-domains/create"
    >
      Create a tracking domain.
    </Link>
  </Left>
  <Right>
    <Panel
      sectioned={true}
    >
      <form>
        <Field
          component={[Function]}
          disabled={false}
          helpText="Domains must be verified to be linked to a sending domain."
          label="Linked Tracking Domain"
          name="trackingDomain"
          options={
            Array [
              Object {
                "label": "track.me",
                "value": "track",
              },
              Object {
                "label": "dont.track.me",
                "value": "dont-track",
              },
            ]
          }
        />
        <Button
          disabled={true}
          primary={true}
          size="default"
          submit={true}
        >
          Update Tracking Domain
        </Button>
      </form>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: AssignTrackingDomain form should have button disabled when submitting 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <p>
      Link to a tracking domain to track opens, clicks, and unsubscribes.
    </p>
    <Link
      replace={false}
      to="/account/tracking-domains/create"
    >
      Create a tracking domain.
    </Link>
  </Left>
  <Right>
    <Panel
      sectioned={true}
    >
      <form>
        <Field
          component={[Function]}
          disabled={true}
          helpText="Domains must be verified to be linked to a sending domain."
          label="Linked Tracking Domain"
          name="trackingDomain"
          options={
            Array [
              Object {
                "label": "track.me",
                "value": "track",
              },
              Object {
                "label": "dont.track.me",
                "value": "dont-track",
              },
            ]
          }
        />
        <Button
          disabled={true}
          primary={true}
          size="default"
          submit={true}
        >
          Updating...
        </Button>
      </form>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: AssignTrackingDomain form should render form with initial values 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <p>
      Link to a tracking domain to track opens, clicks, and unsubscribes.
    </p>
    <Link
      replace={false}
      to="/account/tracking-domains/create"
    >
      Create a tracking domain.
    </Link>
  </Left>
  <Right>
    <Panel
      sectioned={true}
    >
      <form>
        <Field
          component={[Function]}
          disabled={false}
          helpText="Domains must be verified to be linked to a sending domain."
          label="Linked Tracking Domain"
          name="trackingDomain"
          options={
            Array [
              Object {
                "label": "track.me",
                "value": "track",
              },
              Object {
                "label": "dont.track.me",
                "value": "dont-track",
              },
            ]
          }
        />
        <Button
          disabled={false}
          primary={true}
          size="default"
          submit={true}
        >
          Update Tracking Domain
        </Button>
      </form>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: AssignTrackingDomain form should render panel loading component when data is loading 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <p>
      Link to a tracking domain to track opens, clicks, and unsubscribes.
    </p>
    <Link
      replace={false}
      to="/account/tracking-domains/create"
    >
      Create a tracking domain.
    </Link>
  </Left>
  <Right>
    <PanelLoading
      minHeight="400px"
    />
  </Right>
</SendingDomainSection>
`;
